2014-02-08  Andreas Schwab  <schwab@linux-m68k.org>

	PR translation/52289
	* gfortran.dg/coarray_8.f90: Update dg-error match.

2014-02-08  Jakub Jelinek  <jakub@redhat.com>

	PR c/59984
	* gcc.dg/vect/pr59984.c: New test.

	PR middle-end/60092
	* gcc.dg/attr-alloc_align-1.c: New test.
	* gcc.dg/attr-alloc_align-2.c: New test.
	* gcc.dg/attr-alloc_align-3.c: New test.
	* gcc.dg/attr-assume_aligned-1.c: New test.
	* gcc.dg/attr-assume_aligned-2.c: New test.
	* gcc.dg/attr-assume_aligned-3.c: New test.

2014-02-08  Jakub Jelinek  <jakub@redhat.com>

	PR target/60077
	* gcc.target/i386/pr60077-1.c: New test.
	* gcc.target/i386/pr60077-2.c: New test.

2014-02-07  Jakub Jelinek  <jakub@redhat.com>

	PR preprocessor/56824
	* gcc.dg/pr56824.c: New test.

2014-02-07  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gcc.dg/gcc-have-sync-compare-and-swap.c: Align the 16 byte
	variable used for atomic operations.

2014-02-07  Richard Biener  <rguenther@suse.de>

	PR middle-end/60092
	* gcc.dg/vect/pr60092-2.c: New testcase.

2014-02-07  Jakub Jelinek  <jakub@redhat.com>

	PR c++/60082
	Revert
	2014-02-05  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* g++.dg/cilk-plus/CK/catch_exc.cc: Disable test for -O1.
	* c-c++-common/cilk-plus/CK/spawner_inline.c: Likewise.

2014-02-07  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gcc.target/s390/fp2int1.c: New testcase.

2014-02-07  Richard Biener  <rguenther@suse.de>

	PR middle-end/60092
	* gcc.dg/tree-ssa/alias-30.c: New testcase.
	* gcc.dg/tree-ssa/alias-31.c: Likewise.

2014-02-06  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/59918
	* g++.dg/torture/pr59918.C: New testcase.

2014-02-06  Jakub Jelinek  <jakub@redhat.com>

	PR target/59575
	* gcc.target/arm/pr59575.c: New test.

	PR debug/59992
	* gcc.dg/pr59992.c: New test.

2014-02-06  Marc Glisse  <marc.glisse@inria.fr>

	* g++.dg/cpp0x/constexpr-attribute2.C: Restrict to target
	init_priority. Test alignment of variable instead of function.
